[package]
name = "pallet-elections"
version = "0.0.1"
description = "A pallet for selecting members for shards."
publish = false

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
log.workspace = true
scale-codec.workspace = true
scale-info.workspace = true
serde.workspace = true

#polkadot-sdk = { workspace = true, features = [ "frame-support", "frame-system", "sp-runtime", "sp-std" ] }

frame-support = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.13.0-patched", default-features = false }
frame-system = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.13.0-patched", default-features = false }
sp-runtime = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.13.0-patched", default-features = false }
sp-std = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.13.0-patched", default-features = false }

frame-benchmarking = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.13.0-patched", default-features = false, optional = true }

time-primitives = { path = "../../primitives", default-features = false }

[dev-dependencies]
env_logger.workspace = true
lazy_static = "1.4.0"

#polkadot-sdk = { workspace = true, features = [ "pallet-balances", "sp-core", "sp-io" ] }

pallet-balances = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.13.0-patched", default-features = false }
sp-core = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.13.0-patched", default-features = false }
sp-io = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.13.0-patched", default-features = false }

pallet-shards = { path = "../shards", default-features = false }

[features]
default = [ "std" ]
std = [
	"log/std",
	"scale-codec/std",
	"scale-info/std",
	"serde/std",
	#"polkadot-sdk/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-benchmarking?/std",
	"time-primitives/std"
]
runtime-benchmarks = [
	#"polkadot-sdk/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
]
try-runtime = [
	#"polkadot-sdk/try-runtime"
	"frame-support/try-runtime"
]
