[package]
name = "pallet-elections"
description = "A pallet for selecting members for shards."
publish = false
readme = "pallets/elections/README.md"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
log.workspace = true
scale-codec.workspace = true
scale-info.workspace = true
serde.workspace = true
simple-mermaid.workspace = true
pallet-members.workspace = true
pallet-networks.workspace = true
polkadot-sdk = { workspace = true, features = [ "frame-support", "frame-system", "sp-runtime", "sp-std" ] }

time-primitives.workspace = true

[dev-dependencies]
env_logger.workspace = true
lazy_static = "1.4.0"

polkadot-sdk = { workspace = true, features = [ "pallet-balances", "sp-core", "sp-io" ] }

pallet-shards.workspace = true

[features]
default = [ "std" ]
std = [
	"log/std",
	"scale-codec/std",
	"scale-info/std",
	"serde/std",
	"pallet-members/std",
	"polkadot-sdk/std",
	"pallet-networks/std",
	"time-primitives/std",
]
runtime-benchmarks = [
	"polkadot-sdk/runtime-benchmarks",
	"polkadot-sdk/frame-benchmarking",
]
try-runtime = [
	"polkadot-sdk/try-runtime"
]
