[package]
name = "pallet-governance"
description = "Analog mainnet governance pallet."
publish = false

version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-codec.workspace = true
scale-info.workspace = true

polkadot-sdk = { workspace = true, features = [ "frame-support", "frame-system", "pallet-balances", "pallet-staking" ] }

time-primitives.workspace = true

[dev-dependencies]
polkadot-sdk = { workspace = true, features = [ "frame-election-provider-support", "sp-core", "sp-io", "sp-runtime", "sp-staking", "pallet-timestamp" ] }

[features]
default = ["std"]
std = [
	"scale-codec/std",
	"scale-info/std",

    "polkadot-sdk/std",

    "time-primitives/std"
]
runtime-benchmarks = [
	"polkadot-sdk/runtime-benchmarks",
	"polkadot-sdk/frame-benchmarking",
]
try-runtime = [
	"polkadot-sdk/try-runtime",
]
