[package]
name = "pallet-launch"
description = "Pallet to handle migrations between launch stages."
publish = false

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
log.workspace = true

scale-codec.workspace = true
scale-info.workspace = true

polkadot-sdk = { workspace = true, features = [ "frame-system", "frame-support", "pallet-balances" ] }

time-primitives.workspace = true

pallet-airdrop.workspace = true

[features]
default = [ "std" ]
std = [
	"scale-codec/std",
	"scale-info/std",

	"polkadot-sdk/std",

    "time-primitives/std",
	"pallet-airdrop/std"
]
runtime-benchmarks = [
	"polkadot-sdk/runtime-benchmarks",
	"polkadot-sdk/frame-benchmarking",
]
try-runtime = [
	"polkadot-sdk/try-runtime",
]
