[package]
name = "pallet-members"
description = "A pallet for storing members for shards."
publish = false
readme = "pallets/members/README.md"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
log.workspace = true
scale-codec.workspace = true
scale-info.workspace = true

frame-benchmarking = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.15.1-anlog0", default-features = false, optional = true }
frame-support = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.15.1-anlog0", default-features = false }
frame-system = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.15.1-anlog0", default-features = false }
pallet-balances = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.15.1-anlog0", default-features = false }
sp-core = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.15.1-anlog0", default-features = false, optional = true }
sp-runtime = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.15.1-anlog0", default-features = false }
sp-std = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.15.1-anlog0", default-features = false }

time-primitives = { path = "../../primitives", default-features = false }

simple-mermaid.workspace = true 

[dev-dependencies]
env_logger.workspace = true
lazy_static = "1.4.0"
sp-io = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.15.1-anlog0", default-features = false }
sp-keystore = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.15.1-anlog0", default-features = false }

[features]
default = [ "std" ]
std = [
	"scale-codec/std",
	"scale-info/std",

	"polkadot-sdk/std",

	"time-primitives/std",
]
runtime-benchmarks = [
	"polkadot-sdk/runtime-benchmarks",
	"polkadot-sdk/frame-benchmarking",
]
try-runtime = [
	"polkadot-sdk/try-runtime",
]
