[package]
name = "pallet-networks"
authors = [ "Analog Devs <https://github.com/analog-labs>" ]
description = "A pallet for tokenomics of timegraph."
edition = "2021"
homepage = "https://analog.one"
license = "Unlicense"
publish = false
repository = "https://github.com/Analog-Labs/testnet"
version = "0.0.1"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6", default-features = false, features = [
	"derive",
] }

frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0", default-features = false }
scale-info = { version = "2.9.0", default-features = false, features = [ "derive" ] }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0", default-features = false, optional = true}
time-primitives = { path = "../../primitives", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0", default-features = false }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"frame-benchmarking?/std", 
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-runtime/std",
	"time-primitives/std"
]
runtime-benchmarks = [ "frame-benchmarking/runtime-benchmarks", "sp-core" ]
try-runtime = [ "frame-support/try-runtime" ]
