[package]
name = "pallet-networks"
version = "0.0.1"
description = "A pallet for tokenomics of timegraph."
publish = false

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6", default-features = false, features = [
	"derive",
] }

frame-benchmarking = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.13.0-patched", default-features = false, optional = true }
frame-support = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.13.0-patched", default-features = false }
frame-system = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.13.0-patched", default-features = false }
scale-info = { version = "2.9.0", default-features = false, features = [ "derive" ] }
sp-runtime = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.13.0-patched", default-features = false }
sp-core = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.13.0-patched", default-features = false, optional = true}
time-primitives = { path = "../../primitives", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.13.0-patched" }
sp-io = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.13.0-patched", default-features = false }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"frame-benchmarking?/std", 
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-runtime/std",
	"time-primitives/std"
]
runtime-benchmarks = [ "frame-benchmarking/runtime-benchmarks", "sp-core" ]
try-runtime = [ "frame-support/try-runtime" ]
